# agentcap

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  proxy-ownership-plan.md  pyproject.toml  replay-plan.md  rust-toolchain.toml
.github/workflows/: ci-live.yml  ci.yml  linux-live-tests.yml  linux-non-live-tests.yml  live.yml  release.yml  test.yml
containers/: agentcap-goose.Containerfile  agentcap-hermes.Containerfile  agentcap-opencode.Containerfile  agentcap-pi.Containerfile
containers/agentcap-goose/: agentcap-init.sh  dump-traces.sh
containers/agentcap-hermes/: agentcap-init.sh  dump-traces.sh
containers/agentcap-opencode/: agentcap-init.sh  dump-traces.sh  opencode.json
containers/agentcap-pi/: agentcap-init.sh  models.json
docs/: capture.md  export.md  inspect.md  replay.md  tested-models-and-agents.md
docs/demo/: capture.tape  export.tape  inspect.tape  replay.tape  tasks.txt
docs/design/: collocate-agent-setup.md
examples/funes-recall/: .gitignore  README.md  build-funesenv.sh  run.sh  tasks.txt
examples/hf-hub-session/: README.md  export.sh  run.sh  tasks.txt
examples/transformers-agentic/: .gitignore  README.md  build-toolenv.sh  run.sh  tasks.txt
examples/transformers-agentic/skill/agents/: AGENTS.md
examples/transformers-agentic/skill/skills/transformers/: SKILL.md
examples/transformers-coding-session/: README.md  export.sh  run.sh  tasks.txt
packaging/: agentcap.rb
scripts/: MODELS.md  backfill_capture_metadata.py  install.sh  start_llama_cpp_server.sh  start_transformers_serve.sh
scripts/lima/: agentcap-goose.yaml  agentcap-hermes.yaml  agentcap-opencode.yaml  agentcap-pi.yaml
src/: captures.rs  diff.rs  export.rs  lib.rs  ls.rs  main.rs  model.rs  orchestrator.rs  parquet_io.rs  provider.rs  query.rs  run.rs  scan.rs  sse.rs
src/agentcap/: __init__.py  __main__.py  captures.py  export.py  manifest.py  orchestrator.py  provider.py  proxy.py  replay.py  scan.py
src/agentcap/drivers/: __init__.py  goose.py  hermes.py  opencode.py  pi.py
src/agentcap/followups/: __init__.py  continue_.py  synthesized.py  templates.py
src/agentcap/sandbox/: __init__.py  bwrap.py  image_provisioning.py  lima.py  lima_provisioning.py  podman.py  podman_provisioning.py
src/drivers/: goose.rs  hermes.rs  mod.rs  opencode.rs  pi.rs
src/followups/: continue_.rs  mod.rs  synthesized.rs  templates.rs
src/hub/: collection.rs  footer.rs  mod.rs
src/inspect/: app.rs  mod.rs  render.rs  sources.rs
src/proxy/: capture.rs  mod.rs
src/sandbox/: mod.rs  provisioning.rs
tests/: conftest.py  cross_impl.rs  live.rs  proxy.rs  test_captures.py  test_cli.py  test_cli_live.py  test_drivers.py  test_drivers_live.py  test_export.py  test_followups.py  test_inspect_helpers.py  test_manifest.py  test_orchestrator.py  test_podman_sandbox.py  test_provider.py  test_proxy.py  test_proxy_http.py  test_proxy_meta.py  test_replay.py  test_sandbox.py  test_scan.py
tests/fixtures/: sandbox_images.py
tools/viz/: browse-parquets.ipynb
