[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentcap"
version = "0.0.1"
description = "Capture real LLM-agent chat-completion traces and export them as Hugging Face datasets."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["llm", "agent", "trace", "dataset", "huggingface", "kv-cache"]

dependencies = [
    "httpx>=0.27",
    # Floor pinned to address CVE-2026-48710 (GHSA-86qp-5c8j-p5mr):
    # Host header poisons request.url.path; path-based middleware can be bypassed.
    "starlette>=1.0.1",
    "uvicorn>=0.30",
    "huggingface_hub>=1.13",  # used directly by push_bucket; bucket APIs landed in 1.13
    "pyyaml>=6",  # used by HermesDriver to overlay context_length / base_url into config.yaml
    "click>=8.1",
    "pyarrow>=15",  # streaming ParquetWriter in export_local
    "tqdm>=4.60",  # per-row progress in export_local
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[project.scripts]
agentcap = "agentcap.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentcap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that spin up real uvicorn servers and talk over TCP loopback (slower)",
    "live: integration tests that invoke a real agent CLI against a real model server (skipped unless agent binaries + AGENTCAP_TEST_LLM_URL or AGENTCAP_TEST_GGUF are configured)",
]
